# TI-S4-opdrachten

./: README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
ALDS/: ALDS_1.ipynb  ALDS_2.ipynb  ALDS_3.ipynb  Digraph.gv  Feedback_alds.md  K-means.ipynb  pq_tree
CPP/: CMakeLists.txt  Feedback_cpp.md  Makefile  cmake_install.cmake  opdracht1.cc  opdracht1.hh
Vision/: Source_example.sdf
Vision/Opdracht_1/: Gaussian_Blur.py  assignment.py  example1.py  final_assignment.py  hough_lines.py  test.py
Vision/Vision_with_Ai/: Assignment_1.py  Assignment_2.md  Assignment_3.py  Assignment_3_Ai_help.md  simpleCNN.py  test.py  vision_with_ai.md
Vision/Vision_with_Ai/data/MNIST/raw/: t10k-images-idx3-ubyte  train-images-idx3-ubyte
